crates/compiler/tests/converter_test/snapshots/integration_test__converter_test__text_call-2.snap
---
source: crates/compiler/tests/converter_test/mod.rs
expression: "hello {{world}}"

---
- TextCall:
    fast_path: false
    need_patch: false
    texts:
      - StrLit: "hello "
- TextCall:
    fast_path: false
    need_patch: false
    texts:
      - Call:
          - ToDisplayString
          - - Simple:
                - world
                - NotStatic

