crates/compiler/tests/converter_test/snapshots/integration_test__converter_test__text_call.snap
---
source: crates/compiler/tests/converter_test/mod.rs
assertion_line: 23
expression: hello world
---
- TextCall:
    fast_path: false
    need_patch: false
    texts:
      - StrLit: hello world

